{{$NEXT}}

- Add Log::Dispatch->outputs() method. This returns all the output objects in
  a dispatch object.

- Add Log::Dispatch->callbacks() method. This returns all the callback subs in
  a dispatch object.

- Replaced Class::Load with Module::Runtime.


2.41     2013-07-22

- An error is now thrown if you call Log::Dispatch->log without a
  level. Previously you'd just get a warning and then execution would continue
  (without logging anything). Patch by Ross Attrill. RT #87133.


2.40     2013-07-01

- Added a conflict entry for older Log::Dispatch::File::Stamped to the
  metadata. Patch by Karen Etheridge. RT #86215.


2.39     2013-04-21

- You can now pass a port option to the MailSender output. Patch by Whitney
  Jackson.


2.38     2013-04-14

- Fix test that used undeclared prereqs so it does not do that.


2.37     2013-04-14

- Moved Log::Dispatch::File constructor parameter validation moved to
  _basic_init() to facilitate proper subclassing. Patch by ether. RT #84545.


2.36     2013-04-08

- Added a very simple Log::Dispatch::Code output. This lets you log to a
  subroutine reference.

- Added Sys::Syslog 0.25 as a prereq. This is a temporary fix to the problem
  of Log::Dispatch shipping lots of output modules with undeclared prereqs (so
  as not to require mod_perl, four email sending modules, etc.). In the future
  Log::Dispatch will be split into a core distro and a set of distros, one for
  each output that has prereqs. Reported by Michael Schwern. RT #84481.


2.35     2013-01-20

- Added a big warning about the potential for deadlocks in the documentation
  for Log::Dispatch::File::Locked. Patch by ether.


2.34     2012-12-08

- Fix a test bug that caused the tests to fail on all Perls before 5.16.0.


2.33     2012-12-07

- Added a 'syswrite' option to Log::Dispatch::File which causes all writes to
  use syswrite (so they're atomic). Patched by ether. RT #81669.
