@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Added a Log::Dispatch->clone() method. This returns shallow clone. The
+  outputs and callbacks are shared, but changes to outputs and callbacks in
+  the clone do not affect the original, or vice versa.
+
 - Add Log::Dispatch->outputs() method. This returns all the output objects in
   a dispatch object.
 
